tests/sksl/errors/OverflowFloatLiteral.sksl
void main() {
    sk_FragColor.x = half4(3.41e+38);
}
